WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277370
[web-animations] `stroke-color` doesn't work with `transition: all`
https://bugs.webkit.org/show_bug.cgi?id=277370
Summary
[web-animations] `stroke-color` doesn't work with `transition: all`
Tim Nguyen (:ntim)
Reported
2024-07-30 13:04:31 PDT
281570@main
forgot to add the property to `RenderStyle::conservativelyCollectChangedAnimatableProperties`.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-30 13:05:04 PDT
<
rdar://problem/132837478
>
Tim Nguyen (:ntim)
Comment 2
2024-07-30 14:34:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31497
EWS
Comment 3
2024-07-30 17:14:28 PDT
Committed
281619@main
(3525ae62d545): <
https://commits.webkit.org/281619@main
> Reviewed commits have been landed. Closing PR #31497 and removing active labels.
Tim Nguyen (:ntim)
Comment 4
2024-07-30 17:19:14 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/47384
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug