[web-animations] `stroke-color` doesn't work with `transition: all` https://bugs.webkit.org/show_bug.cgi?id=277370 rdar://132837478

Reviewed by Matthieu Dubet.

281570@main forgot to add the property to `RenderStyle::conservativelyCollectChangedAnimatableProperties`.

* LayoutTests/imported/w3c/resources/import-expectations.json:
* LayoutTests/imported/w3c/web-platform-tests/css/fill-stroke/animation/stroke-color-interpolation-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/fill-stroke/animation/stroke-color-interpolation.html: Added.
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::conservativelyCollectChangedAnimatableProperties const):

Canonical link: https://commits.webkit.org/281619@main